--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -156,6 +156,14 @@
     }
 }
 
+.lot-detail-ownership.lot-group .lot-detail-owner {
+    margin-top: 10px;
+
+    &:first-child {
+        margin-top: 0;
+    }
+}
+
 .lot-detail-special {
     .lot-detail-right();
     .lot-detail-icon {
@@ -172,6 +180,10 @@
         list-style: disc outside;
         padding-left: 25px;
     }
+}
+
+.lot-detail-address {
+    margin-top: 10px;
 }
 
 .lot-detail-admin {
