--- a/livinglotsla/templates/actstream/posted_a_picture/action.html
+++ b/livinglotsla/templates/actstream/posted_a_picture/action.html
@@ -1,5 +1,33 @@
-{% extends "actstream/action_detail_content.html" %}
+{% load i18n %}
 
-{% block verb %}
-posted a <a href="{{ action.target.get_absolute_url }}#photos/{{ action.action_object.pk }}" target="_blank">picture</a> on
-{% endblock %}
+<div>
+    <a href="{{ action.target.get_absolute_url }}#photos/{{ action.action_object.pk }}" target="_blank">
+        <img src="{{ action.action_object.thumbnail.url }}" />
+    </a>
+</div>
+
+<span class="actor">
+    {{ action.actor }}
+</span>
+
+<span class="verb">
+    posted a <a href="{{ action.target.get_absolute_url }}#photos/{{ action.action_object.pk }}" target="_blank">picture</a> on
+</span>
+
+<span class="action-object">
+    {% block action_object %}{% endblock %}
+</span>
+
+<span class="action-object">
+    {% if action.target %}
+        {% if action.target.get_absolute_url %}
+            <a href="{{ action.target.get_absolute_url }}" target="_blank">{{ action.target }}</a>
+        {% else %}
+            <a href="{{ action.target_url }}" target="_blank">{{ action.target }}</a>
+        {% endif %}
+    {% endif %}
+</span>
+
+<div class="action-timestamp">
+    {{ action.timestamp|timesince }} {% trans "ago" %}
+</div>
