Load more activities in scrollover

--- a/livinglotsla/templates/livinglots/lots/_scrollover.html
+++ b/livinglotsla/templates/livinglots/lots/_scrollover.html
@@ -10,6 +10,9 @@
             </div>
         {% endfor %}
     </div>
+    <div>
+        <a href="#" id="map-scrollover-show-more" class="btn btn-default">show more</a>
+    </div>
 </section>
 <section>
     <h2>
