--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -96,6 +96,10 @@
         max-width: 100%;
         height: auto;
     }
+
+    .photo-meta {
+        font-size: 12px;
+    }
 }
 
 .lot-detail-organizers {
