--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -539,6 +539,12 @@
 }
 
 #map-totals {
+    color: #777;
     margin-bottom: 5px;
     margin-top: 5px;
+
+    #lots-count,
+    #lots-acres {
+        color: black;
+    }
 }
