--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -65,6 +65,13 @@
         opacity: 0.6;
         filter: ~"alpha(opacity = 60)";
     }
+
+    #map-filters-boundaries {
+        h4 {
+            margin-left: 15px;
+            text-transform: capitalize;
+        }
+    }
 }
 
 .map-filters-wrapper {
