Form focus glow

--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -1,3 +1,7 @@
+/*
+ * Import bootstrap variables and potentially override them
+ */
+@import "../bower_components/bootstrap/less/variables.less";
 @import "variables.less";
 
 
