--- a/livinglotsla/static/css/bootstrap.less
+++ b/livinglotsla/static/css/bootstrap.less
@@ -1,5 +1,4 @@
-// Core variables and mixins
-@import "../bower_components/bootstrap/less/variables.less";
+// Core mixins
 @import "../bower_components/bootstrap/less/mixins.less";
 
 // Reset
