--- a/livinglotsla/static/css/variables.less
+++ b/livinglotsla/static/css/variables.less
@@ -20,3 +20,8 @@
 @private-color: #CC99CC;
 @private-ab-551-color: #663366;
 @private-tax-default-color: #996699;
+
+
+// Forms
+@input-border-focus: #FFF;
+@input-border-radius: 0;
