--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -1,4 +1,7 @@
 /*
+ * Import bootstrap variables and potentially override them
+ */
+/*
  * Import library Less files
  */
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
@@ -1692,17 +1695,17 @@ output {
   background-color: #ffffff;
   background-image: none;
   border: 1px solid #cccccc;
-  border-radius: 4px;
+  border-radius: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 .form-control:focus {
-  border-color: #66afe9;
+  border-color: #ffffff;
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 255, 255, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 255, 255, 0.6);
 }
 .form-control:-moz-placeholder {
   color: #999999;
@@ -5347,7 +5350,6 @@ fieldset[disabled] .btn-default.active {
   margin-right: 0;
 }
 .form-control {
-  border-radius: 0;
   font-size: 22px;
   font-style: italic;
   height: 40px;
