--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -342,6 +342,10 @@ footer {
 #main {
     .make-md-column(9);
     .make-md-column-offset(1);
+
+    article {
+        margin-top: 50px;
+    }
 }
 
 .header-home-link {
