--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3601,6 +3601,8 @@ button.close {
 .map-download-wrapper:after,
 #map-scrollover-row:before,
 #map-scrollover-row:after,
+#map-scrollover .map-scrollover-blog-entry-row:before,
+#map-scrollover .map-scrollover-blog-entry-row:after,
 #map-scrollover .map-scrollover-activities-row:before,
 #map-scrollover .map-scrollover-activities-row:after,
 .lot-detail-page .content-wrapper:before,
@@ -3626,6 +3628,7 @@ button.close {
 .map-filters-inner-wrapper:after,
 .map-download-wrapper:after,
 #map-scrollover-row:after,
+#map-scrollover .map-scrollover-blog-entry-row:after,
 #map-scrollover .map-scrollover-activities-row:after,
 .lot-detail-page .content-wrapper:after {
   clear: both;
@@ -4933,29 +4936,30 @@ h2.blog-entry-title a {
     margin-left: 8.333333333333332%;
   }
 }
-#map-scrollover .map-scrollover-blog-entry {
+#map-scrollover .map-scrollover-blog-entry-row {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+#map-scrollover .map-scrollover-blog-entry-column {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
 }
 @media (min-width: 768px) {
-  #map-scrollover .map-scrollover-blog-entry {
+  #map-scrollover .map-scrollover-blog-entry-column {
     float: left;
     width: 50%;
   }
 }
 @media (min-width: 992px) {
-  #map-scrollover .map-scrollover-blog-entry {
+  #map-scrollover .map-scrollover-blog-entry-column {
     float: left;
     width: 25%;
   }
 }
-#map-scrollover .map-scrollover-blog-entry:first-child {
-  padding-left: 0;
-}
 #map-scrollover .map-scrollover-blog-entry:last-child {
-  padding-right: 0;
+  margin-top: 50px;
 }
 #map-scrollover .map-scrollover-blog-entry-title {
   font-weight: bold;
