--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -66,11 +66,16 @@
         filter: ~"alpha(opacity = 60)";
     }
 
-    #map-filters-boundaries {
+    #map-filters-boundaries,
+    #map-filters-search {
         h4 {
             margin-left: 15px;
             text-transform: capitalize;
         }
+    }
+
+    #map-filters-zoning {
+        border-top: 0;
     }
 }
 
