--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4043,6 +4043,11 @@ header .row {
     border-right: 0;
   }
 }
+.navbar-default .navbar-nav {
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
+}
 .navbar-default .navbar-nav > li > a {
   color: black;
   font-weight: bold;
