--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -162,6 +162,12 @@ header .row {
         border-right: 0;
     }
 
+    .navbar-nav {
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     .navbar-nav > li > a {
         color: black;
         font-weight: bold;
