Remove street view

--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -4,13 +4,10 @@
     cursor: pointer;
 }
 
-.lot-detail-streetview {
+.lot-detail-banner-image {
+    display: none;
     width: 100%;
     height: 250px;
-
-    &-error {
-        display: none;
-    }
 }
 
 .lot-detail-page {
