--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -5020,12 +5020,10 @@ h2.blog-entry-title a {
   height: 250px;
   cursor: pointer;
 }
-.lot-detail-streetview {
+.lot-detail-banner-image {
+  display: none;
   width: 100%;
   height: 250px;
-}
-.lot-detail-streetview-error {
-  display: none;
 }
 .lot-detail-page .content-wrapper {
   margin-left: -15px;
