--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -37,6 +37,10 @@
     #main {
         .make-md-column(6);
         .make-md-column-offset(0);
+
+        article {
+            margin-top: 0;
+        }
     }
 
     #aside-right {
