--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -5,9 +5,12 @@
 }
 
 .lot-detail-banner-image {
-    display: none;
-    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
     height: 250px;
+    overflow: hidden;
+    width: 100%;
 }
 
 .lot-detail-page {
