--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -313,7 +313,11 @@
         margin-top: 25px;
     }
 
-    &-streetview {
+    &-banner-image {
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 100px;
         width: 300px;
     }
 
