--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -28,7 +28,7 @@
             ></div>
         </a>
 
-        <a class="btn btn-default" href="https://maps.google.com/maps?layer=c&cbll={{ lot.centroid.y }},{{ lot.centroid.x }}">See lot on Street View</a>
+        <a class="btn btn-default" href="https://maps.google.com/maps?layer=c&cbll={{ lot.centroid.y }},{{ lot.centroid.x }}" target="_blank">See lot on Street View</a>
 
         <section id="photos" class="lot-detail-side-section photos">
             <h2>{% trans "Photos" %}</h2>
